--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-black==21.10b0
-Flask==2.0.2
-Flask-SQLAlchemy==2.5.1
-gunicorn==20.1.0
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-SQLAlchemy==1.4.29
-Werkzeug==2.0.2
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+Werkzeug==3.0.3
