get flask todo running

--- a/deploy/systemd.service
+++ b/deploy/systemd.service
@@ -3,8 +3,8 @@ Description=flask-todo
 After=network.target
 
 [Service]
-User=www-data
-Group=www-data
+User=brig
+Group=brig
 WorkingDirectory=/home/brig/code/flask-todo
 ExecStart=/home/brig/code/flask-todo/.venv/bin/python3 -m gunicorn -w 1 --bind 0.0.0.0:3003 wsgi:app
 Restart=always
